# gm_fichaje

./: .env.example  .mise.toml  CLAUDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: admin.py  auth.py  corrections.py  deps.py  export.py  portal.py
app/audit/: alerts.py  chain.py  verify.py
app/core/: config.py  security.py  time.py
app/db/: migrate.py  models.py  session.py
app/db/migrations/: 0001_init.sql  0002_worker.sql  0006_corrections_audit.sql  0007_retention.sql
app/domain/: employee_code.py  export.py
app/jobs/: __init__.py  retention.py
app/schemas/: audit.py  correction.py  export.py  worker.py
app/services/: onboarding.py
app/tests/: conftest.py  test_audit_alerts.py  test_audit_verify.py  test_auth_flow.py  test_config.py  test_corrections.py  test_employee_code.py  test_export.py  test_onboarding.py  test_retention.py  test_roles_access.py  test_security.py  test_web_admin.py  test_web_auth.py  test_web_correcciones.py  test_web_fichar.py  test_web_portal.py
app/web/: __init__.py  router.py  session.py
app/web/static/: offline.js
app/web/templates/: 403.html  _estado.html  _registros.html  base.html  change_pin.html  fichar.html  login.html  mis_registros.html
app/web/templates/admin/: alertas.html  alta.html  export.html  horas.html  panel.html  politica.html  registros.html
docs/: DEFERRED.md  FIX.md  IMPLEMENTATION_PLAN.md
docs/compliance/: fase0-decisiones.md
scripts/: check_region.py  seed_admin.py
