[project]
name = "gm-fichaje"
version = "0.1.0"
description = "Registro de jornada (control horario) para Global Meats S.L.U."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "fpdf2>=2.7",
    "cryptography>=42",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: el patrón idiomático de FastAPI usa Depends() en los valores por defecto.
ignore = ["B008"]
